[package]
name = "strata"
version = "0.1.0"
edition = "2021"
description = "An LSM-tree storage engine"
license = "MIT"
readme = "README.md"

[dependencies]
crc32fast = "1.3"
crossbeam-epoch = "0.9"
parking_lot = "0.12"
rand = "0.8"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
snap = "1.1"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.10"

# Benchmark: cargo run --example bench --release

[profile.release]
lto = true
codegen-units = 1
